--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "coffee-script": "1.12.7",
     "color": "^0.7.3",
     "command-palette": "https://www.atom.io/api/packages/command-palette/versions/0.43.5/tarball",
+    "count": "file:packages/count",
     "dalek": "file:packages/dalek",
     "dedent": "^0.7.0",
     "deprecation-cop": "file:packages/deprecation-cop",
